--- a/styles/place.css
+++ b/styles/place.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #CE1126;
-    --secondary-color: #007E3A
+    --secondary-color: #007E3A;
     --text-color: #333;
     --background-color: #fff;
     --padding: 1rem;
